force-app/main/default/objects/Targets__c/Targets__c.object-meta.xml
<CustomObject>
    <label>Targets</label>
    <nameField>
        <label>Targets Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>