force-app/main/default/objects/Targets__c/fields/ABC__c.field-meta.xml
<CustomField>
    <fullName>ABC__c</fullName>
    <formula>(Initals__c / 3) + 
Annuals__c   + 
Saas__c  + 

Subs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>