force-app/main/default/objects/Targets__c/fields/ABC_Target__c.field-meta.xml
<CustomField>
    <fullName>ABC_Target__c</fullName>
    <formula>Initals_Target__c / 3 + Annuals_Target__c + Saas_Target__c + Subs_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ABC Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>