force-app/main/default/objects/Targets__c/fields/Annuals__c.field-meta.xml
<CustomField>
    <fullName>Annuals__c</fullName>
    <label>Annuals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>