force-app/main/default/objects/Targets__c/fields/Annuals_Target__c.field-meta.xml
<CustomField>
    <fullName>Annuals_Target__c</fullName>
    <label>Annuals Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>