force-app/main/default/objects/Targets__c/fields/DivisionUR__c.field-meta.xml
<CustomField>
    <fullName>DivisionUR__c</fullName>
    <label>DivisionUR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Division</valueSetName>
    </valueSet>
</CustomField>