force-app/main/default/objects/Targets__c/fields/FY_Start__c.field-meta.xml
<CustomField>
    <fullName>FY_Start__c</fullName>
    <label>FY Start</label>
    <type>Date</type>
</CustomField>