force-app/main/default/objects/Targets__c/fields/Initails_MTD__c.field-meta.xml
<CustomField>
    <fullName>Initails_MTD__c</fullName>
    <label>Initails MTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>