force-app/main/default/objects/Targets__c/fields/IntergrationID__c.field-meta.xml
<CustomField>
    <fullName>IntergrationID__c</fullName>
    <externalId>true</externalId>
    <label>IntergrationID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>