force-app/main/default/objects/Targets__c/fields/ManagerCheck__c.field-meta.xml
<CustomField>
    <fullName>ManagerCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ManagerCheck</label>
    <type>Checkbox</type>
</CustomField>