force-app/main/default/objects/Targets__c/fields/NPS_Target__c.field-meta.xml
<CustomField>
    <fullName>NPS_Target__c</fullName>
    <label>NPS Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>