force-app/main/default/objects/Targets__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <formula>IF(MONTH(TODAY()) = 7, 1 ,  IF(MONTH(TODAY()) = 8, 2 , IF(MONTH(TODAY()) = 9, 3 , IF(MONTH(TODAY()) = 10, 4 , IF(MONTH(TODAY()) = 11, 5 , IF(MONTH(TODAY()) = 12, 6 , IF(MONTH(TODAY()) = 1, 7 , IF(MONTH(TODAY()) = 2, 8 , IF(MONTH(TODAY()) = 3, 9 , IF(MONTH(TODAY()) = 4, 10 , IF(MONTH(TODAY()) = 5, 11 , IF(MONTH(TODAY()) = 6, 12 , NULL))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>