force-app/main/default/objects/Targets__c/fields/Presidents_Club_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Presidents_Club_Qualified__c</fullName>
    <formula>IF( Presidents_Clubs__c &gt;  Presidents_Clubs_Target__c &amp;&amp; Presidents_Clubs_Target__c != NULL , TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presidents Club Qualified</label>
    <type>Checkbox</type>
</CustomField>