force-app/main/default/objects/Targets__c/fields/Presidents_Clubs__c.field-meta.xml
<CustomField>
    <fullName>Presidents_Clubs__c</fullName>
    <formula>ABC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presidents Clubs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>