force-app/main/default/objects/Targets__c/fields/Presidents_Clubs_Target__c.field-meta.xml
<CustomField>
    <fullName>Presidents_Clubs_Target__c</fullName>
    <label>Presidents Clubs Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>