force-app/main/default/objects/Targets__c/fields/Saas_Target__c.field-meta.xml
<CustomField>
    <fullName>Saas_Target__c</fullName>
    <label>Saas Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>