force-app/main/default/objects/Targets__c/fields/Services_MTD__c.field-meta.xml
<CustomField>
    <fullName>Services_MTD__c</fullName>
    <label>Services MTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>