force-app/main/default/objects/Targets__c/fields/Subs__c.field-meta.xml
<CustomField>
    <fullName>Subs__c</fullName>
    <label>Subs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>