force-app/main/default/objects/Targets__c/fields/Subs_MTD__c.field-meta.xml
<CustomField>
    <fullName>Subs_MTD__c</fullName>
    <label>Subs MTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>