force-app/main/default/objects/Targets__c/fields/Team_ABC_Target__c.field-meta.xml
<CustomField>
    <fullName>Team_ABC_Target__c</fullName>
    <label>Team ABC Target</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>