force-app/main/default/objects/Targets__c/fields/Users__c.field-meta.xml
<CustomField>
    <fullName>Users__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Targets</relationshipName>
    <type>Lookup</type>
</CustomField>