force-app/main/default/objects/Targets__c/recordTypes/NPS_Targets.recordType-meta.xml
<RecordType>
    <fullName>NPS_Targets</fullName>
    <active>true</active>
    <label>NPS Targets</label>
</RecordType>